BT and low battery indicators, plus visual tweaks
Added two icons either side of the Strava logo to indicate a lost BT connection and a battery state of less than 20%. Both are accompanied by vibrations.

Widened and pushed apart the container graphics to fill unnecessary border.

--- a/appinfo.json
+++ b/appinfo.json
@@ -19,6 +19,16 @@
                 "type": "png"
             },
             {
+                "file": "images/nobt.png",
+                "name": "NOBT",
+                "type": "png"
+            },
+            {
+                "file": "images/lowbatt.png",
+                "name": "LOWBATT",
+                "type": "png"
+            },
+            {
                 "characterRegex": "[0123456789:]",
                 "file": "fonts/theboldfont.ttf",
                 "name": "FONT_THEBOLDFONT_REGULAR_42",
